point at redis-rs master

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ crc16 = "0.4"
 futures = "0.3"
 rand = "0.7"
 pin-project = "0.4"
-redis = { version = "0.14", features = ["tokio-rt-core"] }
+redis = { git="https://github.com/mitsuhiko/redis-rs", branch="master", features = ["tokio-rt-core"] }
 tokio = { version = "0.2", features = ["time"] }
 log = "0.4"
 
